added vrsco experience

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -11,6 +11,21 @@
 
 %---------------------------------------------------------
   \cventry
+    {CEO} % Job title
+    {VRSCO} % Organization
+    {Worcester, MA} % Location
+    {January 2022 - Present}
+    {
+      \begin{cvitems} % Descriptions of tasks/responsibilities
+      \item {Raised over \$90k of seed capital and amassed international user base consisting of over 50 users.}
+      \item {Prototyped and deployed 2 unique physical products to recover users' lost items.}
+      \item {Designed, developed, and published a mobile app for iOS and Android with features like QR code registration, multi-platform sign-in, email verification, and messaging for lost item recovery.}
+      \item {Created a server backend with real-time chat using websockets, secure password management, email sending, and payment processing.}
+      \item {Configured Linode cloud infrastructure to host databases, frontend, and backend components.}
+      \item {Developed an ecommerce frontend in React with components for dynamic product display, a shopping cart, and secure payment processing.}
+      \end{cvitems}
+    }
+  \cventry
     {Software Engineer} % Job title
     {Optum} % Organisation
     {Boston, MA} % Location
@@ -21,11 +36,9 @@
         \item {Utilized Extract-Transform-Load (ETL) techniques to extract data from MySQL, OrientDB, and Elasticsearch databases.}
         \item {Enabled stakeholders to make data-driven decisions by providing them with valuable business insights extracted from the processed data.}
         \item {Collaborated with onshore and offshore team to rewrite a critical step of the ingestion process for all GitHub repositories in the organization.}
-        \item {Significantly reduced the processing time from almost a week to only a day.}
-        \item {Developed a parsing solution to extract critical information, including the package name of Java, Groovy, and C\# files.}
+        \item {Developed a parsing solution to extract critical information, including the package name of Java, Groovy, and C\# files from all repos.}
         \item {Refactored the ingestion process to implement delta processing, ensuring updates only occur for repositories modified since the last run.}
-        \item {Utilized the Dask library to enable a multi-threaded and multi-node approach for efficient processing.}
-        \item {Contributed to significant improvements in data processing efficiency and data quality.}
+        \item {Contributed to significant improvements in data processing efficiency by optimizing process through vertical and horizontal scaling.}
       \end{cvitems}
     }
   \cventry
