--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -33,11 +33,9 @@
     {October – December 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
-        \item {Facilitated weekly sponsor meetings in Spanish.}
-        \item {Interviewed female victims of domestic abuse in Spanish.}
-        \item {Optimized interview transcription process.}
+        \item {Facilitated weekly sponsor meetings and interviewed female victims of domestic abuse in Spanish.}
         \item {Managed and operated filming equipment to capture data from
-        interviews.}
+        interviews and optimized interview transcription process for rapid analysis.}
         \item {Produced videos that showcase the unique ecologically sustainable aspects of our sponsor.}
         \item {Followed
         Strunk’s Elements of Style to edit final report for clarity, concision, and cohesiveness.}
