--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JavaScript, HTML/CSS, Python, Java, SQL, C/C++, C\#,  Arduino, Verilog, Racket.} % Skills
+    {JavaScript, HTML/CSS, Python, Java, SQL, C/C++, C\#,  Arduino, Verilog, Racket, Ruby.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, K8s, Express, npm, NodeJS.} % Skills
+    {Git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, K8s, Express, npm, NodeJS, Svelte.} % Skills
 
 
 \end{cvskills}
