--- a/resume.tex
+++ b/resume.tex
@@ -91,7 +91,7 @@
 % \input{cv/achievements.tex}
 % \input{cv/publications.tex}
 % \input{cv/interests.tex}
-\input{cv/languages.tex}
+%\input{cv/languages.tex} %removing for now
 
 \vspace*{\fill}
 % \centering{\textbf{References available upon request.}}
