--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cventry
     {CEO} % Job title
-    {VRSCO} % Organization
+    {VRSCO - www.vrsco.chat - check it out!} % Organization
     {Worcester, MA} % Location
     {January 2022 - Present}
     {
