--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -18,10 +18,10 @@
     {
       \begin{cvitems} % Descriptions of tasks/responsibilities
       \item {Raised over \$90k of seed capital and amassed international user base consisting of over 50 users.}
-      \item {Prototyped and deployed 2 unique physical products to recover users' lost items.}
+      \item {Devised processes to manufacture VRSCO tags out of aluminum for less than \$0.25 each tag, produced more than 200 tags.}
       \item {Designed, developed, and published a mobile app for iOS and Android with features like QR code registration, multi-platform sign-in, email verification, and messaging for lost item recovery.}
       \item {Created a server backend with real-time chat using websockets, secure password management, email sending, and payment processing.}
-      \item {Configured Linode cloud infrastructure to host databases, frontend, and backend components.}
+      \item {Configured cloud infrastructure to host databases, frontend, and backend components, handles 2K unique visitors and 20K requests a month.}
       \item {Developed an ecommerce frontend in React with components for dynamic product display, a shopping cart, and secure payment processing.}
       \end{cvitems}
     }
@@ -48,12 +48,15 @@
     {June 2021 - June 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Utilized the Angular framework with NG Prime to enhance the user interface of a business critical web application.}
-        \item {Leveraged the Java Spring Boot framework to engineer robust APIs tailored to meet consumer demands and facilitate seamless data exchange.}
-        \item {Demonstrated adeptness in crafting MySQL commands to effectively query and update the database.}
-        \item {Employed Jenkins to customize deployment pipelines and integrate essential security measures such as Twistlock and SonarQube.}
-        \item {Demonstrated proficiency in Docker, enabling the creation of lightweight and scalable containers to encapsulate and deploy APIs efficiently.}
-        \item {Harnessed the power of Kubernetes to manage deployed containers, enhancing system uptime and performance}
+        \item {Enhanced the user interface of Tech360, a critical business application, using Angular and NG Prime.}
+        \item {Refactored web components of Hardware Padu page into local components to allow filtering and exportation of data.}
+        \item {Added frontend capabilities to filter and export data of Hardware Padu page.}
+        \item {Designed, engineered and published robust APIs using Swagger and Spring Boot to provide other teams in the organization with PLM BSI data.}
+        \item {Crafted MySQL statements to execute within API to retrieve and update tables within my team's database.}
+        \item {Implemented functionality to filter data retrieved according to parameters set by user.}
+        \item {Helped external teams generate credentials through API management system so that they may access our team's APIs.}
+        \item {Built and deployed docker containers of Spring Boot APIs to Kubernetes using Jenkins.}
+        \item {Created python script to generate JWTs to streamline API testing for myself, showed it to my coworkers and is now used across the team.}
       \end{cvitems}
     }
 
