added more skills

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JavaScript, HTML/CSS, Python, Java, SQL, C/C++, C\#,  Arduino, Verilog, Racket, Ruby.} % Skills
+    {JavaScript, HTML/CSS, Python, Java, SQL, C/C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, K8s, Express, npm, NodeJS, Svelte.} % Skills
+    {Git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, Kubernetes, Express, NodeJS, Svelte, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB.} % Skills
 
 
 \end{cvskills}
