change dash to em dash

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -14,7 +14,7 @@
     {CEO} % Job title
     {VRSCO - www.vrsco.chat - check it out!} % Organization
     {Worcester, MA} % Location
-    {January 2022 - Present}
+    {January 2022 – Present}
     {
       \begin{cvitems} % Descriptions of tasks/responsibilities
       \item {Raised over \$90k of seed capital and amassed international user base consisting of over 50 users.}
@@ -29,7 +29,7 @@
     {Software Engineer} % Job title
     {Optum} % Organisation
     {Boston, MA} % Location
-    {June 2022 - May 2023} % Date(s)
+    {June 2022 – May 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed and deployed an Airflow Directed Acyclic Graph (DAG) to orchestrate the data collection process from diverse data stores.}
@@ -45,7 +45,7 @@
     {Technology Development Program Associate} % Job title
     {} % Organisation
     {} % Location
-    {June 2021 - June 2022} % Date(s)
+    {June 2021 – June 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Enhanced the user interface of Tech360, a critical business application, using Angular and NG Prime.}
