--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -14,7 +14,7 @@
     {Worcester Polytechnic Institute} % Organisation
     {Hospital Kiosk Application } % Project
     {Worcester, MA} % Location
-    {March - May 2020} % Date(s)
+    {March – May 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
        \item {Contributed to a ten-person team working in a competition to apply Agile development methodologies and
