--- a/cv/education.tex
+++ b/cv/education.tex
@@ -14,7 +14,7 @@
     {BS: Computer Science. Minors: Professional Writing, Electrical and Computer Engineering.} % Degree
     {Worcester Polytechnic Institute} % Institution
     {Worcester, MA} % Location
-    {August 2017 - May 2021} % Date(s)
+    {August 2017 – May 2021} % Date(s)
     {
       % \begin{cvitems} % Description(s) bullet points
       %   \item {\textbf{Courses:} Software Engineering, Software Security Engineering, Tools and Techniques in Computer Network Security, WebWare, Operating Systems, Embedded Computing in Engineering Design}
