--- a/resume.tex
+++ b/resume.tex
@@ -44,7 +44,7 @@
 \email{ikyriazis@wpi.edu}
 \homepage{ioannis.ky} 
 \github{github.com/IKyriazis}
-\linkedin{linkedin.com/in/ioannis-kyriazis-466517181}
+% \linkedin{linkedin.com/in/ioannis-kyriazis-466517181}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
