--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JavaScript, HTML/CSS, Python, Java, SQL, C/C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart.} % Skills
+    {JavaScript, HTML, CSS, Python, Java, SQL, C, C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, Kubernetes, Express, NodeJS, Svelte, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB.} % Skills
+    {git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, Kubernetes, Express, Node.js, Svelte, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB.} % Skills
 
 
 \end{cvskills}
