made phone number better

--- a/resume.tex
+++ b/resume.tex
@@ -40,7 +40,7 @@
 \name{Ioannis}{Kyriazis}
 \position{Full Stack Software Engineer}
 
-\mobile{7745340190}
+\mobile{+1 774 534 0190}
 \email{ikyriazis@wpi.edu}
 \homepage{ioannis.ky} 
 \github{github.com/IKyriazis}
