remove personal pronouns

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -56,7 +56,7 @@
         \item {Implemented functionality to filter data retrieved according to parameters set by user.}
         \item {Helped external teams generate credentials through API management system so that they may access our team's APIs.}
         \item {Built and deployed docker containers of Spring Boot APIs to Kubernetes using Jenkins.}
-        \item {Created python script to generate JWTs to streamline API testing for myself, showed it to my coworkers and is now used across the team.}
+        \item {Eliminated 3 out of 5 steps for testing APIs by writing python script that generates JWTs.}
       \end{cvitems}
     }
 
