changin some bullets

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -33,12 +33,12 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed and deployed an Airflow Directed Acyclic Graph (DAG) to orchestrate the data collection process from diverse data stores.}
-        \item {Utilized Extract-Transform-Load (ETL) techniques to extract data from MySQL, OrientDB, and Elasticsearch databases.}
-        \item {Enabled stakeholders to make data-driven decisions by providing them with valuable business insights extracted from the processed data.}
-        \item {Collaborated with onshore and offshore team to rewrite a critical step of the ingestion process for all GitHub repositories in the organization.}
+        \item {Extracted data from MySQL, OrientDB, and Elasticsearch databases using Extract-Transform-Load (ETL) techniques.}
+        \item {Provided stakeholders with valuable business insights extracted from processed data to make informed decisions.}
+        \item {Rewrote a critical step of the ingestion process for all GitHub repositories in the organization.}
         \item {Developed a parsing solution to extract critical information, including the package name of Java, Groovy, and C\# files from all repos.}
         \item {Refactored the ingestion process to implement delta processing, ensuring updates only occur for repositories modified since the last run.}
-        \item {Contributed to significant improvements in data processing efficiency by optimizing process through vertical and horizontal scaling.}
+        \item {Optimized process through vertical and horizontal scaling to cut run time by 10x using Dask python library.}
       \end{cvitems}
     }
   \cventry
@@ -51,7 +51,7 @@
         \item {Enhanced the user interface of Tech360, a critical business application, using Angular and NG Prime.}
         \item {Refactored web components of Hardware Padu page into local components to allow filtering and exportation of data.}
         \item {Added frontend capabilities to filter and export data of Hardware Padu page.}
-        \item {Designed, engineered and published robust APIs using Swagger and Spring Boot to provide other teams in the organization with PLM BSI data.}
+        \item {Designed, implemented and published robust APIs using Swagger and Spring Boot to provide other teams in the organization with PLM BSI data.}
         \item {Crafted MySQL statements to execute within API to retrieve and update tables within my team's database.}
         \item {Implemented functionality to filter data retrieved according to parameters set by user.}
         \item {Helped external teams generate credentials through API management system so that they may access our team's APIs.}
