--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -17,7 +17,7 @@
     {January 2022 – Present}
     {
       \begin{cvitems} % Descriptions of tasks/responsibilities
-      \item {Raised over \$90k of seed capital and amassed international user base consisting of over 50 users.}
+      \item {Raised over \$90K of seed capital and amassed international user base consisting of over 50 users.}
       \item {Devised processes to manufacture VRSCO tags out of aluminum for less than \$0.25 each tag, produced more than 200 tags.}
       \item {Designed, developed, and published a mobile app for iOS and Android with features like QR code registration, multi-platform sign-in, email verification, and messaging for lost item recovery.}
       \item {Created a server backend with real-time chat using websockets, secure password management, email sending, and payment processing.}
@@ -32,12 +32,10 @@
     {June 2022 – May 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed and deployed an Airflow Directed Acyclic Graph (DAG) to orchestrate the data collection process from diverse data stores.}
-        \item {Extracted data from MySQL, OrientDB, and Elasticsearch databases using Extract-Transform-Load (ETL) techniques.}
-        \item {Provided stakeholders with valuable business insights extracted from processed data to make informed decisions.}
-        \item {Rewrote a critical step of the ingestion process for all GitHub repositories in the organization.}
-        \item {Developed a parsing solution to extract critical information, including the package name of Java, Groovy, and C\# files from all repos.}
-        \item {Refactored the ingestion process to implement delta processing, ensuring updates only occur for repositories modified since the last run.}
+        \item {Designed and deployed a 10+ step Airflow Directed Acyclic Graph (DAG) to orchestrate the data collection process from 3 diverse data stores.}
+        \item {Provided leaders with valuable business insights extracted from processed data to make informed decisions.}
+        \item {Developed a parsing solution to extract critical information from more than 5K repos.}
+        \item {Refactored the ingestion process to implement delta processing, resulting in 90\% decrease in run time.}
         \item {Optimized process through vertical and horizontal scaling to cut run time by 10x using Dask python library.}
       \end{cvitems}
     }
@@ -49,10 +47,9 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Enhanced the user interface of Tech360, a critical business application, using Angular and NG Prime.}
-        \item {Refactored web components of Hardware Padu page into local components to allow filtering and exportation of data.}
-        \item {Added frontend capabilities to filter and export data of Hardware Padu page.}
-        \item {Designed, implemented and published robust APIs using Swagger and Spring Boot to provide other teams in the organization with PLM BSI data.}
-        \item {Crafted MySQL statements to execute within API to retrieve and update tables within my team's database.}
+        \item {Refactored web components of Hardware PADU page into local components to allow filtering and exportation of data.}
+        \item {Added frontend capabilities to filter and export data of Hardware PADU page.}
+        \item {Designed, implemented and published robust APIs using Swagger and Spring Boot to provide external teams with PLM BSI data.}
         \item {Implemented functionality to filter data retrieved according to parameters set by user.}
         \item {Helped external teams generate credentials through API management system so that they may access our team's APIs.}
         \item {Built and deployed docker containers of Spring Boot APIs to Kubernetes using Jenkins.}
