--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -17,8 +17,8 @@
     {March – May 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
-       \item {Contributed to a ten-person team working in a competition to apply Agile development methodologies and
-        design patterns in Java to create a pathfinding kiosk application, map builder, room scheduler, etc. which won best application in the first and second iterations.}
+       \item {Achieved best application in the first and second iterations of class competition to apply Agile development methodologies and
+        design patterns in Java to create a pathfinding kiosk application, map builder, room scheduler, etc.}
         \item {Gathered software requirements by surveying, brainstorming, creating user stories, scenarios and storyboards.}
         \item {Implemented two-factor authentication, RFID card authentication, salt/hashed password storage, and an internal transportation request menu.}
       \end{cvitems}
