add oncall bullet

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -37,6 +37,7 @@
         \item {Developed a parsing solution to extract critical information from more than 5K repos.}
         \item {Refactored the ingestion process to implement delta processing, resulting in 90\% decrease in run time.}
         \item {Optimized process through vertical and horizontal scaling to cut run time by 10x using Dask python library.}
+        \item {Resolved 30+ issues with servers and databases while on call.}
       \end{cvitems}
     }
   \cventry
@@ -50,7 +51,7 @@
         \item {Refactored web components of Hardware PADU page into local components to allow filtering and exportation of data.}
         \item {Added frontend capabilities to filter and export data of Hardware PADU page.}
         \item {Designed, implemented and published robust APIs using Swagger and Spring Boot to provide external teams with PLM BSI data.}
-        \item {Implemented functionality to filter data retrieved according to parameters set by user.}
+        \item {Implemented functionality to sort and filter data retrieved according to parameters set by user.}
         \item {Helped external teams generate credentials through API management system so that they may access our team's APIs.}
         \item {Built and deployed docker containers of Spring Boot APIs to Kubernetes using Jenkins.}
         \item {Eliminated 3 out of 5 steps for testing APIs by writing python script that generates JWTs.}
