added canvaskicks proj and condensed experience

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -33,7 +33,6 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed and deployed a 10+ step Airflow Directed Acyclic Graph (DAG) to orchestrate the data collection process from 3 diverse data stores.}
-        \item {Provided leaders with valuable business insights extracted from processed data to make informed decisions.}
         \item {Developed a parsing solution to extract critical information from more than 5K repos.}
         \item {Refactored the ingestion process to implement delta processing, resulting in 90\% decrease in run time.}
         \item {Optimized process through vertical and horizontal scaling to cut run time by 10x using Dask python library.}
@@ -47,12 +46,11 @@
     {June 2021 – June 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Enhanced the user interface of Tech360, a critical business application, using Angular and NG Prime.}
         \item {Refactored web components of Hardware PADU page into local components to allow filtering and exportation of data.}
-        \item {Added frontend capabilities to filter and export data of Hardware PADU page.}
+        \item {Added frontend capabilities to filter and export data of Hardware PADU page using Angular and NG Prime.}
         \item {Designed, implemented and published robust APIs using Swagger and Spring Boot to provide external teams with PLM BSI data.}
         \item {Implemented functionality to sort and filter data retrieved according to parameters set by user.}
-        \item {Helped external teams generate credentials through API management system so that they may access our team's APIs.}
+        \item {Onboarded 3 external teams onto published APIs using Optum's API management system.}
         \item {Built and deployed docker containers of Spring Boot APIs to Kubernetes using Jenkins.}
         \item {Eliminated 3 out of 5 steps for testing APIs by writing python script that generates JWTs.}
       \end{cvitems}
