--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -10,6 +10,19 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+\cventry
+    {Canvas Kicks} % Organisation
+    {Artist Portfolio Page - canvaskicks.store - check it out!} % Project
+    {Worcester, MA} % Location
+    {March – May 2021} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of project
+       \item {Built secure admin dashboard which includes custom CMS to support automatic post creation and message inbox from potential clients.}
+       \item {Facilitated safe community interactions by allowing authenticated users to comment on any post.}
+      \end{cvitems}
+    }
+
+
   \cventry
     {Worcester Polytechnic Institute} % Organisation
     {Hospital Kiosk Application } % Project
