--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -49,7 +49,7 @@
         \item {Facilitated weekly sponsor meetings and interviewed female victims of domestic abuse in Spanish.}
         \item {Managed and operated filming equipment to capture data from
         interviews and optimized interview transcription process for rapid analysis.}
-        \item {Produced videos that showcase the unique ecologically sustainable aspects of our sponsor.}
+        \item {Produced 5 videos that showcase the unique ecologically sustainable aspects of our sponsor.}
         \item {Followed
         Strunk’s Elements of Style to edit final report for clarity, concision, and cohesiveness.}
       \end{cvitems}
