--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
 \cventry
     {Canvas Kicks} % Organisation
-    {Artist Portfolio Page - canvaskicks.store - check it out!} % Project
+    {Artist Portfolio Page - www.canvaskicks.store - check it out!} % Project
     {Worcester, MA} % Location
     {March – May 2021} % Date(s)
     {
