--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {CEO} % Job title
+    {Founder} % Job title
     {VRSCO - www.vrsco.chat - check it out!} % Organization
     {Worcester, MA} % Location
     {January 2022 – Present}
