add elixir as lang

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JavaScript, HTML, CSS, Python, Java, SQL, C, C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart, Painless.} % Skills
+    {JavaScript, Elixir, HTML, CSS, Python, Java, SQL, C, C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart, Painless.} % Skills
 
 %---------------------------------------------------------
   \cvskill
