--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, Kubernetes, Express, Node.js, Svelte, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB, OrientDB, Elasticsearch, GraphQL.} % Skills
+    {git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, Kubernetes, Express, Node.js, Svelte, Astro, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB, OrientDB, Elasticsearch, GraphQL.} % Skills
 
 
 \end{cvskills}
