updated vrsco bullet

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -17,7 +17,7 @@
     {January 2022 – Present}
     {
       \begin{cvitems} % Descriptions of tasks/responsibilities
-      \item {Raised over \$90K of seed capital and amassed international user base consisting of over 50 users.}
+      \item {Grew international user base consisting of over 80 users.}
       \item {Devised processes to manufacture VRSCO tags out of aluminum for less than \$0.25 each tag, produced more than 200 tags.}
       \item {Designed, developed, and published a mobile app for iOS and Android with features like QR code registration, multi-platform sign-in, email verification, and messaging for lost item recovery.}
       \item {Created a server backend with real-time chat using websockets, secure password management, email sending, and payment processing.}
