--- a/resume.tex
+++ b/resume.tex
@@ -41,7 +41,7 @@
 \position{Full Stack Software Engineer}
 
 \mobile{+1 774 534 0190}
-\email{ikyriazis@wpi.edu}
+\email{ioannis@vrsco.chat}
 \homepage{ioannis.ky} 
 \github{github.com/IKyriazis}
 % \linkedin{linkedin.com/in/ioannis-kyriazis-466517181}
@@ -92,7 +92,7 @@
 % \input{cv/achievements.tex}
 % \input{cv/publications.tex}
 % \input{cv/interests.tex}
-%\input{cv/languages.tex} %removing for now
+% \input{cv/languages.tex} %removing for now
 
 \vspace*{\fill}
 % \centering{\textbf{References available upon request.}}
