change to unitedhealth

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -27,7 +27,7 @@
     }
   \cventry
     {Software Engineer} % Job title
-    {Optum} % Organisation
+    {UnitedHealth Group} % Organisation
     {Boston, MA} % Location
     {June 2022 – May 2023} % Date(s)
     {
