--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -11,18 +11,18 @@
 
 %---------------------------------------------------------
   \cventry
-    {Founder, Software Engineer} % Job title
-    {VRSCO - www.vrsco.chat - check it out!} % Organization
+    {Senior Software Engineer} % Job title
+    {VRSCO} % Organization
     {Worcester, MA} % Location
     {January 2022 – Present}
     {
       \begin{cvitems} % Descriptions of tasks/responsibilities
-      \item {Grew international user base consisting of over 80 users.}
-      \item {Devised processes to manufacture VRSCO tags out of aluminum for less than \$0.25 each tag, produced more than 200 tags.}
+      \item {Launched and scaled VRSCO, an end to end solution for lost item recovery, building an international user base of 80+ users and producing over 200 affordable aluminum tags with manufacturing costs of \$0.25/tag.}
+      \item {Configured scalable cloud infrastructure to host databases, frontend, and backend components, to handle 20K+ requests a month.}
+      \item {Engineered a robust server with real-time chat using websockets, secure password management, email sending, and payment processing.}
       \item {Designed, developed, and published a mobile app for iOS and Android with features like QR code registration, multi-platform sign-in, email verification, and messaging for lost item recovery.}
-      \item {Created a server backend with real-time chat using websockets, secure password management, email sending, and payment processing.}
-      \item {Configured cloud infrastructure to host databases, frontend, and backend components, handles 2K unique visitors and 20K requests a month.}
       \item {Developed an ecommerce frontend in React with components for dynamic product display, a shopping cart, and secure payment processing.}
+      \item {Lead architecture and code reviews to maintain high-quality code and ensure best practices in development with junior developers.}
       \end{cvitems}
     }
   \cventry
@@ -32,8 +32,7 @@
     {June 2022 – May 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed and deployed a 10+ step Airflow Directed Acyclic Graph (DAG) to orchestrate the data collection process from 3 diverse data stores.}
-        \item {Developed a parsing solution to extract critical information from more than 5K repos.}
+        \item {Automated the data collection and parsing of 5k+ repos across 3 diverse data stores using Airflow.}
         \item {Refactored the ingestion process to implement delta processing, resulting in 90\% decrease in run time.}
         \item {Optimized process through vertical and horizontal scaling to cut run time by 10x using Dask python library.}
         \item {Resolved 30+ issues with servers and databases while on call.}
