--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JavaScript, Elixir, HTML, CSS, Python, Java, SQL, C, C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart, Painless.} % Skills
+    {TypeScript, JavasScript, Elixir, HTML, CSS, Python, Java, SQL, C, C++, C\#,  Arduino, Verilog, Racket, Ruby, Dart, Painless.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {git, Linux, Shell (Bash/Zsh), Angular, React, React Native, Docker, Kubernetes, Express, Node.js, Svelte, Astro, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB, OrientDB, Elasticsearch, GraphQL.} % Skills
+    {Node.js, React, Postgres, Redis, git, Linux, Shell (Bash/Zsh), Angular, React Native, Docker, Kubernetes, Express, Svelte, Astro, Airflow, Jenkins, Flutter, Firebase, MySQL, MongoDB, OrientDB, Elasticsearch, GraphQL.} % Skills
 
 
 \end{cvskills}
