--- a/cv/education.tex
+++ b/cv/education.tex
@@ -11,14 +11,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. Computer Science. Minors: Professional Writing, Electrical and Computer Engineering.} % Degree
+    {B.S. Computer Science. Minors: Electrical and Computer Engineering, Professional Writing.} % Degree
     {Worcester Polytechnic Institute} % Institution
     {Worcester, MA} % Location
     {May 2021} % Date(s)
-    {
-      % \begin{cvitems} % Description(s) bullet points
-      %   \item {\textbf{Courses:} Software Engineering, Software Security Engineering, Tools and Techniques in Computer Network Security, WebWare, Operating Systems, Embedded Computing in Engineering Design}
-      % \end{cvitems}
-    }
+    {}
 %---------------------------------------------------------
 \end{cventries}
