--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -17,12 +17,13 @@
     {May 2023 – Present}
     {
       \begin{cvitems} % Descriptions of tasks/responsibilities
-      \item {Launched and scaled VRSCO, an end to end solution for lost item recovery, building an international user base of 80+ users and producing over 200 affordable aluminum tags with manufacturing costs of \$0.25/tag.}
-      \item {Configured scalable cloud infrastructure to host databases, frontend, and backend components, to handle 20K+ requests a month.}
-      \item {Engineered a robust server with real-time chat using websockets, secure password management, email sending, and payment processing.}
-      \item {Designed, developed, and published a mobile app for iOS and Android with features like QR code registration, multi-platform sign-in, email verification, and messaging for lost item recovery.}
-      \item {Developed an ecommerce frontend in React with components for dynamic product display, a shopping cart, and secure payment processing.}
-      \item {Lead architecture and code reviews to maintain high-quality code and ensure best practices in development with junior developers.}
+          \item {Founded and scaled VRSCO, a comprehensive lost-item recovery platform, achieving an international user base of 80+ users.}
+          \item {Architected and deployed a highly scalable cloud infrastructure capable of handling 20K+ monthly requests, ensuring 99.9\% uptime.}
+          \item {Developed a secure backend server featuring real-time chat via WebSockets, robust password management, automated email notifications, and integrated payment processing.}
+          \item {Designed, developed, and published a cross-platform mobile application (iOS and Android) featuring QR code registration, multi-platform sign-in, email verification, and real-time messaging for lost-item recovery.}
+          \item {Built an e-commerce web app, enabling seamless user experience with dynamic product displays, cart, and secure payment gateways.}
+          \item {Mentored junior developers through code reviews and architectural guidance, promoting high-quality code and adherence to best practices.}
+          \item {Implemented manufacturing methods to produce 200+ aluminum tags at a cost of \$0.25/tag in less than one man hour.}
       \end{cvitems}
     }
   \cventry
@@ -32,17 +33,14 @@
     {June 2021 – May 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Automated the data collection and parsing of 5k+ repos across 3 diverse data stores using Airflow.}
-        \item {Refactored the ingestion process to implement delta processing, resulting in 90\% decrease in run time.}
-        \item {Optimized process through vertical and horizontal scaling to cut run time by 10x using Dask python library.}
-        \item {Resolved 30+ issues with servers and databases while on call.}
-        \item {Refactored web components of Hardware PADU page into local components to allow filtering and exportation of data.}
-        \item {Added frontend capabilities to filter and export data of Hardware PADU page using Angular and NG Prime.}
-        \item {Designed, implemented and published robust APIs using Swagger and Spring Boot to provide external teams with PLM BSI data.}
-        \item {Implemented functionality to sort and filter data retrieved according to parameters set by user.}
-        \item {Onboarded 3 external teams onto published APIs using Optum's API management system.}
-        \item {Built and deployed docker containers of Spring Boot APIs to Kubernetes using Jenkins.}
-        \item {Eliminated 3 out of 5 steps for testing APIs by writing python script that generates JWTs.}
+        \item {Streamlined the data ingestion process for 5K+ repositories across three data stores, automating workflows using Airflow and reducing runtime by 90\% through delta processing.}
+        \item {Optimized data pipelines via vertical and horizontal scaling with the Dask Python library, achieving a 10x performance boost.}
+        \item {Resolved 30+ high-priority server and database issues while on-call, ensuring minimal service interruptions.}
+        \item {Redesigned the Hardware PADU page frontend, introducing advanced filtering and data export capabilities using Angular and NG Prime.}
+        \item {Designed, documented, and deployed scalable APIs with Spring Boot and Swagger, empowering external teams to access data seamlessly.}
+        \item {Onboarded three external teams onto published APIs via Optum's API management platform, ensuring smooth integration and adoption.}
+        \item {Deployed containerized Spring Boot APIs to Kubernetes using Jenkins, enhancing reliability and deployment speed.}
+        \item {Eliminated redundant API testing steps by automating JWT generation using a custom Python script, reducing testing time by 60\%.}
       \end{cvitems}
     }
 
