--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -11,10 +11,21 @@
 
 %---------------------------------------------------------
 \cventry
+    {Solfege Mental Model Game} % Organisation
+    {dofalare.com} % Project
+    {Thessaloniki, Greece} % Location
+    {May - June 2024} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of project
+   \item {Built full stack web application with Astro, Svelte, NodeJS, JavaScript, and MySQL to allow users to practice their mental model of the solfege system with easy and hard mode.}
+       \item {Automatically calculate and display user game statistics and allow users to submit their name along with their score to the public leaderboard.}
+      \end{cvitems}
+    }
+\cventry
     {Canvas Kicks} % Organisation
-    {Artist Portfolio Page - www.canvaskicks.store - check it out!} % Project
+    {Artist Portfolio Page} % Project
     {Worcester, MA} % Location
-    {March – May 2021} % Date(s)
+    {March - May 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
        \item {Built secure admin dashboard which includes custom CMS to support automatic post creation and message inbox from potential clients.}
@@ -27,7 +38,7 @@
     {Worcester Polytechnic Institute} % Organisation
     {Hospital Kiosk Application } % Project
     {Worcester, MA} % Location
-    {March – May 2020} % Date(s)
+    {March - May 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
        \item {Achieved best application in the first and second iterations of class competition to apply Agile development methodologies and
@@ -43,7 +54,7 @@
     {Worcester Polytechnic Institute} % Organisation
     {The Maria Amor Foundation: A Case Study on Holistic Healing} % Project
     {Cuenca, Ecuador} % Location
-    {October – December 2019} % Date(s)
+    {October - December 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
         \item {Facilitated weekly sponsor meetings and interviewed female victims of domestic abuse in Spanish.}
@@ -51,7 +62,7 @@
         interviews and optimized interview transcription process for rapid analysis.}
         \item {Produced 5 videos that showcase the unique ecologically sustainable aspects of our sponsor.}
         \item {Followed
-        Strunk’s Elements of Style to edit final report for clarity, concision, and cohesiveness.}
+        Strunk's Elements of Style to edit final report for clarity, concision, and cohesiveness.}
       \end{cvitems}
     }
 
