--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@ right=0.5in]{geometry}              % specify right page margin
 \vspace{-9pt}
 \begin{itemize}
   \item Achieved best application in the class competition to apply Agile development methodologies and design patterns in Java to create a pathfinding kiosk application, map builder, room scheduler, etc.
-  \item Implemented two‐factor authentication, RFID card authentication using Arduino and integrating with Java via Serial Communication, salt/hashed password storage, and an internal transportation request menu.
+  \item Implemented two‐factor authentication, RFID card authentication using Arduino and integrating with app via serial communication, salt/hashed password storage, and an internal transportation request menu.
 \end{itemize}
 
 % alternate formatting for projects section
