--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@ right=0.5in]{geometry}              % specify right page margin
   \item Automatically calculate and display user game statistics and allow users to submit their name along with their score to the public leaderboard.
 \end{itemize}
 
-\textbf{CanvasKicks Portfolio Page} \hfill \href{https://canvaskicks.store}{canvaskicks.store} \\
+\textbf{CanvasKicks Portfolio Page} \hfill \href{https://canvaskicks.store/prevWorks.html}{canvaskicks.store} \\
 \vspace{-9pt}
 \begin{itemize}
   \item Built secure admin dashboard which includes custom CMS to support automatic post creation and message inbox from potential clients using HTML, CSS, JavaScript, MongoDB, and Node.js.
