--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@ right=0.5in]{geometry}              % specify right page margin
 \vspace{5pt}
 
 % contact information
-\centerline{\href{mailto:ioannis@kyriazis.software}{ioannis@kyriazis.software} | \href{https://ioannis.ky}{ioannis.ky} | \href{https://github.com/ikyriazis}{github.com/ikyriazis}}
+\centerline{\href{mailto:yiannisgr1@gmail.com}{yiannisgr1@gmail.com} | \href{https://ioannis.ky}{ioannis.ky} | \href{https://github.com/ikyriazis}{github.com/ikyriazis}}
 
 \vspace{-10pt}
 
@@ -53,7 +53,7 @@ right=0.5in]{geometry}              % specify right page margin
 \textbf{Senior Software Engineer,} {VRSCO} -- Worcester, MA \hfill May 2023 -- Present \\
 \vspace{-9pt}
 \begin{itemize}
-  \item Architected and deployed a highly scalable cloud infrastructure using nginx, Linode, pm2, and Cloudflare that handles 145K+ monthly requests, ensuring 99.9\% uptime.
+  \item Architected and deployed a highly scalable cloud infrastructure using nginx, Linode, pm2, and Cloudflare that handles 195K+ monthly requests, ensuring 99.9\% uptime.
   \item Designed, developed, and published a cross‐platform app (iOS and Android) using React Native that includes QR code registration, multi‐platform sign‐in, email verification, and real-time messaging for item recovery.
   \item Developed a secure backend server using Node.js and MySQL featuring real‐time chat via WebSockets, robust and secure password management, automated email notifications, and integrated payment processing.
   \item Overhauled the existing React e-commerce site using Astro and Svelte to improve performance and aesthetic. Features dynamic product display, cart logic, and secure Stripe integration.
@@ -65,7 +65,7 @@ right=0.5in]{geometry}              % specify right page margin
 \begin{itemize}
   \item Streamlined the data ingestion process for 5K+ repositories across three datastores, automating work flows using Airflow and reducing runtime and data consumption by 90\% through delta processing.
   \item Optimized data pipelines via horizontal scaling with the Dask Python library, cutting down process by 10x.
-  \item Refactored legacy table web component to local comnponent and integrated within Angular project.
+  \item Refactored legacy table web component to local component and integrated within Angular project.
   \item Added frontend capabilities to sort/filter data and generate Excel files using Angular, NG Prime, and SheetJS.
   \item Designed, implemented and published APIs using Swagger and Spring Boot to share data with external teams.
   \item Built and deployed API Docker containers to Kubernetes using Jenkins to ensure robustness and scalability.
